--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -14,11 +14,35 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ['2.5', '2.6', '2.7', '3.0', '3.1']
+        ruby: ['2.4', '2.5', '2.6', '2.7', '3.0', '3.1']
         activerecord: ['5.2', '6.0', '6.1', '7.0']
         plugin: ['', '_with_request_store']
         experimental: [false]
         exclude:
+        - ruby: '2.4'
+          activerecord: '6.0'
+          plugin: ''
+          experimental: false
+        - ruby: '2.4'
+          activerecord: '6.0'
+          plugin: '_with_request_store'
+          experimental: false
+        - ruby: '2.4'
+          activerecord: '6.1'
+          plugin: ''
+          experimental: false
+        - ruby: '2.4'
+          activerecord: '6.1'
+          plugin: '_with_request_store'
+          experimental: false
+        - ruby: '2.4'
+          activerecord: '7.0'
+          plugin: ''
+          experimental: false
+        - ruby: '2.4'
+          activerecord: '7.0'
+          plugin: '_with_request_store'
+          experimental: false
         - ruby: '2.5'
           activerecord: '7.0'
           plugin: ''
